--- a/drbd/tasks/main.yml
+++ b/drbd/tasks/main.yml
@@ -1,10 +1,13 @@
 ---
 # tasks file for drbd
+  - rpm_key:
+      state: present
+      key: https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
   - name: add drbd repository
     yum:
       name: http://www.elrepo.org/elrepo-release-7.0-3.el7.elrepo.noarch.rpm
       state: present
-  - name: install drbd90-utils 
+  - name: install drbd90-utils
     yum:
       name: drbd90-utils
       state: present
@@ -19,23 +22,32 @@
       name: kmod-drbd90
       state: present
 
-  - name: disable SELinux
-    selinux: state=disabled
+  - name: Add the DRBD module
+    modprobe:
+      name: drbd
+      state: present
+
+  - selinux:
+      state: disabled
 
   - name: disable firewalld
-    service: firewalld
-    state: stopped
+    service:
+      name: firewalld
+      state: stopped
 
   - name: install corosync
-    yum: 
+    yum:
       name: corosync
       state: present
 
   - name: install pcs pacemaker
-    yum: 
+    yum:
       name: pcs
       state: present
-  - name: copy drbd0.res 
+  - name: copy drbd0.res
     copy:
       src: "{{ role_path }}/files/drbd0.res"
       dest: /etc/drbd.d/drbd0.res
+                                                                                                        
+                                                                                                        
+                                                                                       19,0-1        All
